fix slide height on mobile

--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -149,12 +149,13 @@
     flex-flow: column nowrap;
     justify-content: space-between;
 
-    min-height: 358px;
+    min-height: 250px;
     padding: 20px 38px 18px 20px;
-
+    
     @include from('md') {
       padding: 26px 30px 32px;
       height: 100%;
+      min-height: 358px;
     }
   }
 
